Nginx-VS-IstioGW/ticket-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nginx-scenario
  name: stg-ticket
  labels:
    app: nginx-ticket-scenario
    service: stg-ticket
spec:
  ports:
  - port: 9001
    targetPort: 3001
    name: http
  selector:
    app: nginx-ticket-scenario
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx-scenario
  name: stg-ticket
  labels:
    service_type: backend
    service_name: ticket
    app: nginx-ticket-scenario
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ticket-scenario
  template:
    metadata:
      labels:
        service_type: backend
        service_name: ticket
        app: nginx-ticket-scenario
    spec:
      serviceAccountName: stg-ticket
      containers:
      - name: stg-ticket-service
        image: harbor.capstone.adaptivenetworklab.org/capstone/ticket:d96424f
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
        securityContext:
          runAsUser: 1000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "150m"
      imagePullSecrets:
      - name: harbor-registry-secret
